syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.baku.vmagicmirror";

package Baku.VMagicMirror;

service VmmGrpc {
  rpc CommandGeneric (GenericCommandRequest) returns (GenericCommandResponse) {}
  rpc QueryGeneric (GenericQueryRequest) returns (GenericQueryResponse) {}
}

message GenericCommandRequest {
  string command = 1;
  string args = 2;
}

message GenericCommandResponse {
  bool result = 1;
}

message GenericQueryRequest {
   string command = 1;
   string args = 2;
}

message GenericQueryResponse {
   string result = 1;
}
